fix About alignment

--- a/src/launchAbout/launchAbout.scss
+++ b/src/launchAbout/launchAbout.scss
@@ -100,7 +100,7 @@
   }
 }
 
-@media screen and (max-width: 1475px) {
+@media screen and (max-width: 1220px) {
   .launchAbout {
     margin: 0 10%;
     text-align: center;
